DELETE#destroy SequenceMailing.
